# Matlab_simu

./: Energy_extracted_ss4.mat  MCR_K_prop.m  MRC_K_prop.m  README.md  WaveStar.slx  WaveStar.slx.autosave  controller_init.m  userDefinedFunctions.m  userDefinedFunctionsMCR.m  wecSimInputFile.m
Nemoh/Nemoh-master/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  README.md
Nemoh/Nemoh-master/.devcontainer/: Dockerfile  devcontainer.json
Nemoh/Nemoh-master/Common/: Bodyconditions.f90  Constants.f90  Elementary_functions.f90  Environment.f90  Face.f90  Identification.f90  Logfile.f90  MCallInterp.f90  MNemohCal.f90  Mesh.f90  Results.f90
Nemoh/Nemoh-master/Documentation/: .gitignore  Nemoh_Manual.tex  bibliography.bib
Nemoh/Nemoh-master/Documentation/figures/: Ver_2Bodies.eps  Ver_Cylinder.eps  Ver_NonSymmetrical_1.eps  Ver_NonSymmetrical_2.eps  Ver_NonSymmetrical_addedmass.eps  Ver_NonSymmetrical_dampcoef.eps  Ver_NonSymmetrical_excitationforce.eps  Ver_PostProcessing.eps
Nemoh/Nemoh-master/Documentation/figures/Cylinder/: QTFheave.eps  QTFheave_diag.eps  QTFpitch.eps  QTFpitch_diag.eps  QTFsurge.eps  QTFsurge_diag.eps  addedmass.eps  dampcoef.eps  excForce.eps  mesh.eps
Nemoh/Nemoh-master/Documentation/figures/OC3_HYWIND/: QTFM_Heave.eps  QTFM_Heave_diag.eps  QTFM_Pitch.eps  QTFM_Pitch_diag.eps  QTFM_Surge.eps  QTFM_Surge_diag.eps  bodyMesh.eps
Nemoh/Nemoh-master/Documentation/figures/OC4/: FSmesh.eps  QTFM_Heave_beta030.eps  QTFM_Heave_beta030_diag.eps  QTFM_Pitch_beta030.eps  QTFM_Pitch_beta030_diag.eps  QTFM_Surge_beta030.eps  QTFM_Surge_beta030_diag.eps  bodymesh.eps
Nemoh/Nemoh-master/Documentation/figures/Softwind/: FSmesh.eps  QTFM_Heave_beta030.eps  QTFM_Heave_beta030_diag.eps  QTFM_Pitch_beta030.eps  QTFM_Pitch_beta030_diag.eps  QTFM_Surge_beta030.eps  QTFM_Surge_beta030_diag.eps  QTFP_Heave_beta00.eps  QTFP_Heave_beta00_diag.eps  QTFP_Pitch_beta00.eps  QTFP_Pitch_beta00_diag.eps  QTFP_Surge_beta00.eps  QTFP_Surge_beta00_diag.eps  bodymesh.eps
Nemoh/Nemoh-master/Mesh/: CMakeLists.txt  ExMaillage.f90  Mailleur.f90  calCol.f90  coque.f90  hydre.f90  hydrostatic_cal.f90  mesh.f90
Nemoh/Nemoh-master/QTF/: CMakeLists.txt
Nemoh/Nemoh-master/QTF/Common/: MFileDirectoryList.f90  MReadInputFiles.f90
Nemoh/Nemoh-master/QTF/PostProcessor/: CMakeLists.txt  MQpostproc.f90  Main.f90
Nemoh/Nemoh-master/QTF/PreProcessor/: CMakeLists.txt  MInfluenceMatrix.f90  MQpreprocessor.f90  Main.f90
Nemoh/Nemoh-master/QTF/Solver/: CMakeLists.txt  MQSolver.f90  MQSolverAsymp.f90  MQSolverOutputFiles.f90  MQSolverPreparation.f90  Main.f90
Nemoh/Nemoh-master/Solver/: CMakeLists.txt  NEMOH.f90
Nemoh/Nemoh-master/Solver/Core/: COM_VAR.f90  FORCES.f90  FREESURFACE.f90  GREEN_1.f90  GREEN_2.f90  INITIALIZE_GREEN.f90  KOCHIN.f90  M_SOLVER.f90  OUTPUT.f90  SOLVE_BEM_DIRECT.f90
Nemoh/Nemoh-master/matlabRoutines/GMSHconverter/: GMSHFreeSurfaceMesh2HydrostarNemoh.m  GMSHmesh2DiodoreHydrostarNemoh.m
Nemoh/Nemoh-master/matlabRoutines/postproc_testcases/: CompareHydroCoefs_all_simuls.m  CompareQTF_NEMOHpostprocN_HYDROSTAR.m
Nemoh/Nemoh-master/matlabRoutines/postproc_testcases/data_param/: dataparamNEMOH1_1.m  dataparamNEMOH1_2.m  dataparamNEMOH1_3.m  dataparamNEMOH1_4.m  dataparamNEMOH1_5.m  dataparamNEMOH1_6.m  dataparamNEMOH1_7.m  dataparamQTF_1.m  dataparamQTF_2.m  dataparamQTF_3.m  dataparamQTF_4.m  dataparamQTF_5.m
Nemoh/Nemoh-master/matlabRoutines/postproc_testcases/lib/: Compare_all_simuls.m  WRITE_HYDROSTAR_ExctForces_to_NEMOH.m  WRITE_HYDROSTAR_RAO_to_NEMOH.m  closest.m  funP_contour.m  fun_readHydcoef_NEMOHOutput.m  fun_readHydrostarMQTFOutput.m  fun_readHydrostarOutput.m  fun_readHydrostarQTFOutput.m  fun_readIRF_NEMOHOutput.m  fun_readMdirHydrostarOutput.m  fun_readNEMOHQTFOutput.m  fun_readNEMOHQTFOutputTerms_N.m  fun_read_FSPotentialRad_NEMOH.m  fun_read_FSPotential_NEMOH.m  fun_read_FSVelocityRad_NEMOH.m  fun_read_FSVelocity_NEMOH.m  fun_read_meshfile.m  nemoh_postproc_results.m
Nemoh/Nemoh-master/postProcessor/: CMakeLists.txt  IRF.f90  MPP_Compute_RAOs.f90  MPP_ReadInputFiles.f90  Main.f90  Plot_WaveElevation.f90
Nemoh/Nemoh-master/preProcessor/: BodyConditions.f90  CMakeLists.txt  Integration.f90  Main.f90  Mesh.f90
Nemoh_simus/: .gitkeep.txt
hydroData/: wavestar.h5
results/: resistive_k_prop_25.fig
slprj/_jitprj/: jitEngineAccessInfo.mat  s1OXXSlZZTOn3dY4zING6dG.l  s1OXXSlZZTOn3dY4zING6dG.mat  s4FuV4YZv9VqN9s9SJDYEa.l  sBvRpry4hAhVhl00Tip9tLD.l  sBvRpry4hAhVhl00Tip9tLD.mat  sIaYEk3jCrm0f4qkvgCGAFG.mat  sO4I9ECBpddfuqRU34Qa65F.l  saiuJO1LUNheAGtt1B7qNCE.l  sfohNWmTQEmhjlDuB0Xzkx.l  sheuPgjpz6Nl336KE7skD1.mat  sjUr6W7moGj6zfOeYZJ9PJG.mat  snYKVbhEc9fvRKjNg0u3qxB.mat  sogyGJ4rqYdtnYUYdsya0ND.l  suCdIcnWtX21T4x53TZpKSG.l  suCdIcnWtX21T4x53TZpKSG.mat  svwsa9hOpf8Vj0bW7q73wuG.l  svwsa9hOpf8Vj0bW7q73wuG.mat  syAVZXUMBXoBgOsHI477vfD.l  syAVZXUMBXoBgOsHI477vfD.mat
slprj/_sfprj/EMLReport/: emlReportAccessInfo.mat  s75C7B8j3RLvyoOw7BqFGfB.mat  sEB9AVIBEHLvfRNPt09D6NH.mat  sO4I9ECBpddfuqRU34Qa65F.mat  sWPrPHFFxJUOYqlL4RTQTiD.mat  sajyxrt6pQqR9cmXmsRf2QG.mat  sheuPgjpz6Nl336KE7skD1.mat  shzCdOXhiVQTkDYdaO0pzdD.mat  snYKVbhEc9fvRKjNg0u3qxB.mat  suCdIcnWtX21T4x53TZpKSG.mat  syAVZXUMBXoBgOsHI477vfD.mat
slprj/_sfprj/precompile/: 5FQGKA9nzm8A7XFFUCSJcF.mat  5fbwmFbvnRgYpJQ0KmgGS.mat  70dW4pfyrnpEFsg8DbHmgB.mat  (+11 more)
wecSim_simus/: Extracted_energy_ss5.mat  Extracted_energy_ss6.mat  Extracted_energy_ss7.mat  WaveStar.slxc  userDefinedFunctions.m
wecSim_simus/results/: SS7_proportional_controller.fig  SS7_proportional_controller_input_power.fig  resistive_k_prop_30.fig  resistive_k_prop_35.fig
(+53 files in other folders)
